--- a/app/src/main/res/layout/activity_live_preview.xml
+++ b/app/src/main/res/layout/activity_live_preview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:fitsSystemWindows="false"
         android:id="@+id/fireTopLayout"
@@ -11,10 +11,10 @@
 
     <mlh.hack.CameraSourcePreview
             android:id="@+id/firePreview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true">
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp">
 
         <mlh.hack.GraphicOverlay
                 android:id="@+id/fireFaceOverlay"
@@ -25,4 +25,10 @@
                 android:layout_alignParentBottom="true"/>
     </mlh.hack.CameraSourcePreview>
 
-</RelativeLayout>
+    <SurfaceView
+            android:id="@+id/surfaceView"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"/>
+
+</LinearLayout>
